QuickAdminPanel automatic commit

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -70,3 +70,12 @@ table.dataTable thead .sorting_desc {
     padding-left: 0px;
     padding-right: 0px;
 }
+
+.form-group .required::after {
+    content: " *";
+    color: red;
+}
+
+.form-check.is-invalid ~ .invalid-feedback {
+    display: block;
+}
